RESOLVED FIXED134336
Text-decoration-style: dashed / dotted rendered as solid
https://bugs.webkit.org/show_bug.cgi?id=134336
Summary Text-decoration-style: dashed / dotted rendered as solid
Philippe Wittenbergh
Reported 2014-06-25 22:35:09 PDT
Created attachment 233883 [details] test case test case: expected a dashed or dotted underline actual: a solid underline The Webkit inspector does seem to accept the values as valid / supported. All other text-decoration-style values are supported and rendered correctly.
Attachments
test case (693 bytes, text/html)
2014-06-25 22:35 PDT, Philippe Wittenbergh
no flags
Patch (15.23 KB, patch)
2016-06-07 16:45 PDT, Myles C. Maxfield
dino: review+
Radar WebKit Bug Importer
Comment 1 2016-06-02 17:17:44 PDT
Myles C. Maxfield
Comment 2 2016-06-07 15:37:07 PDT
I can't figure out how this ever worked. We set the stroke style ever since r132076, but we've been filling the underline instead of stroking it since r23761. (So setting the stroke style is irrelevant.)
Myles C. Maxfield
Comment 3 2016-06-07 16:45:00 PDT
Dean Jackson
Comment 4 2016-06-07 16:51:20 PDT
Comment on attachment 280746 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280746&action=review > Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:1518 > + float particleWidth = 0; > + switch (strokeStyle) { > + case DottedStroke: > + particleWidth = bounds.height(); > + break; > + case DashedStroke: > + particleWidth = 2 * bounds.height(); I think this should be dashWidth. > LayoutTests/ChangeLog:15 > + * fast/css3-text/css3-text-decoration/text-decoration-dashed-expected-mismatch.html: Added. > + * fast/css3-text/css3-text-decoration/text-decoration-dashed.html: Added. > + * fast/css3-text/css3-text-decoration/text-decoration-dotted-dashed-expected-mismatch.html: Added. > + * fast/css3-text/css3-text-decoration/text-decoration-dotted-dashed.html: Added. > + * fast/css3-text/css3-text-decoration/text-decoration-dotted-expected-mismatch.html: Added. > + * fast/css3-text/css3-text-decoration/text-decoration-dotted.html: Added. It's a shame we can't produce actual results to test against.
Myles C. Maxfield
Comment 5 2016-06-07 17:05:03 PDT
Michael Catanzaro
Comment 6 2016-06-19 17:28:07 PDT
Note these layout tests are flaky on GTK, see bug #158918.
Note You need to log in before you can comment on or make changes to this bug.