Text-decoration-style: dashed / dotted rendered as solid https://bugs.webkit.org/show_bug.cgi?id=134336

Reviewed by Dean Jackson.

Source/WebCore:

We already had most of the infrastructure for dotted / dashed underlines.
Previously, we were setting the stroke style for the underlines, but then
filling the underlines (which means the stroke styles is irrelevant).
Instead, we should just compute the individual dots / dashes to fill.

The implementation of this is done inside GraphicsContext because
GraphicsContext is already responsible for handling the single / double
underline distinction. Extending it to be responsible for dotted / dashed
is the natural thing to do.

Tests: fast/css3-text/css3-text-decoration/text-decoration-dashed.html
       fast/css3-text/css3-text-decoration/text-decoration-dotted-dashed.html
       fast/css3-text/css3-text-decoration/text-decoration-dotted.html

* platform/graphics/GraphicsContext.h:
* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::drawLineForText):
(WebCore::GraphicsContext::drawLinesForText):
* platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContext::drawLineForText):
(WebCore::GraphicsContext::drawLinesForText):
* rendering/TextDecorationPainter.cpp:
(WebCore::drawSkipInkUnderline):
(WebCore::TextDecorationPainter::paintTextDecoration):

LayoutTests:

Make sure that the dotted / dashed / solid renderings are all distinct.

* fast/css3-text/css3-text-decoration/text-decoration-dashed-expected-mismatch.html: Added.
* fast/css3-text/css3-text-decoration/text-decoration-dashed.html: Added.
* fast/css3-text/css3-text-decoration/text-decoration-dotted-dashed-expected-mismatch.html: Added.
* fast/css3-text/css3-text-decoration/text-decoration-dotted-dashed.html: Added.
* fast/css3-text/css3-text-decoration/text-decoration-dotted-expected-mismatch.html: Added.
* fast/css3-text/css3-text-decoration/text-decoration-dotted.html: Added.

Canonical link: https://commits.webkit.org/176563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201777 268f45cc-cd09-0410-ab3c-d52691b4dbfc