Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp
@@ -1479,15 +1479,15 @@ FloatRect GraphicsContext::roundToDevicePixels(const FloatRect& rect, RoundingMo
     return FloatRect(roundedOrigin, roundedLowerRight - roundedOrigin);
 }
 
-void GraphicsContext::drawLineForText(const FloatPoint& point, float width, bool printing, bool doubleLines)
+void GraphicsContext::drawLineForText(const FloatPoint& point, float width, bool printing, bool doubleLines, StrokeStyle strokeStyle)
 {
     DashArray widths;
     widths.append(width);
     widths.append(0);
-    drawLinesForText(point, widths, printing, doubleLines);
+    drawLinesForText(point, widths, printing, doubleLines, strokeStyle);
 }
 
-void GraphicsContext::drawLinesForText(const FloatPoint& point, const DashArray& widths, bool printing, bool doubleLines)
+void GraphicsContext::drawLinesForText(const FloatPoint& point, const DashArray& widths, bool printing, bool doubleLines, StrokeStyle strokeStyle)
 {
     if (paintingDisabled())
         return;
@@ -1508,8 +1508,32 @@ void GraphicsContext::drawLinesForText(const FloatPoint& point, const DashArray&
     Vector<CGRect, 4> dashBounds;
     ASSERT(!(widths.size() % 2));
     dashBounds.reserveInitialCapacity(dashBounds.size() / 2);
-    for (size_t i = 0; i < widths.size(); i += 2)
-        dashBounds.append(CGRectMake(bounds.x() + widths[i], bounds.y(), widths[i+1] - widths[i], bounds.height()));
+
+    float dashWidth = 0;
+    switch (strokeStyle) {
+    case DottedStroke:
+        dashWidth = bounds.height();
+        break;
+    case DashedStroke:
+        dashWidth = 2 * bounds.height();
+        break;
+    case SolidStroke:
+    default:
+        break;
+    }
+
+    for (size_t i = 0; i < widths.size(); i += 2) {
+        auto left = widths[i];
+        auto width = widths[i+1] - widths[i];
+        if (!dashWidth)
+            dashBounds.append(CGRectMake(bounds.x() + left, bounds.y(), width, bounds.height()));
+        else {
+            auto startParticle = static_cast<unsigned>(std::ceil(left / (2 * dashWidth)));
+            auto endParticle = static_cast<unsigned>((left + width) / (2 * dashWidth));
+            for (unsigned j = startParticle; j < endParticle; ++j)
+                dashBounds.append(CGRectMake(bounds.x() + j * 2 * dashWidth, bounds.y(), dashWidth, bounds.height()));
+        }
+    }
 
     if (doubleLines) {
         // The space between double underlines is equal to the height of the underline
